Support for configuration of allowed HTTP methods per resource